--- a/student_intervention.ipynb
+++ b/student_intervention.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -91,7 +91,7 @@
       "Total number of students: 395\n",
       "Number of students who passed: 265\n",
       "Number of students who failed: 130\n",
-      "Number of features: 31\n",
+      "Number of features: 30\n",
       "Graduation rate of the class: 67.09%\n"
      ]
     }
@@ -99,7 +99,7 @@
    "source": [
     "# TODO: Compute desired values - replace each '?' with an appropriate expression/function call\n",
     "n_students = student_data.shape[0]\n",
-    "n_features = student_data.shape[1]\n",
+    "n_features = np.count_nonzero(list(student_data.columns[:-1]))\n",
     "n_passed =(student_data.passed == \"yes\").sum()\n",
     "n_failed = (student_data.passed == \"no\").sum()\n",
     "grad_rate = float(n_passed)/float(n_students)*100\n",
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -304,7 +304,7 @@
      "text": [
       "Training DecisionTreeClassifier...\n",
       "Done!\n",
-      "Training time (secs): 0.064\n"
+      "Training time (secs): 0.111\n"
      ]
     }
    ],
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -341,7 +341,7 @@
      "text": [
       "Predicting labels using DecisionTreeClassifier...\n",
       "Done!\n",
-      "Prediction time (secs): 0.005\n",
+      "Prediction time (secs): 0.002\n",
       "F1 score for training set: 1.0\n"
      ]
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -375,8 +375,8 @@
      "text": [
       "Predicting labels using DecisionTreeClassifier...\n",
       "Done!\n",
-      "Prediction time (secs): 0.002\n",
-      "F1 score for test set: 0.683760683761\n"
+      "Prediction time (secs): 0.001\n",
+      "F1 score for test set: 0.743801652893\n"
      ]
     }
    ],
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -401,15 +401,15 @@
       "Training set size: 300\n",
       "Training DecisionTreeClassifier...\n",
       "Done!\n",
-      "Training time (secs): 0.004\n",
+      "Training time (secs): 0.003\n",
       "Predicting labels using DecisionTreeClassifier...\n",
       "Done!\n",
-      "Prediction time (secs): 0.001\n",
+      "Prediction time (secs): 0.000\n",
       "F1 score for training set: 1.0\n",
       "Predicting labels using DecisionTreeClassifier...\n",
       "Done!\n",
       "Prediction time (secs): 0.000\n",
-      "F1 score for test set: 0.661016949153\n"
+      "F1 score for test set: 0.747967479675\n"
      ]
     }
    ],
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -520,15 +520,15 @@
       "Training set size: 300\n",
       "Training SVC...\n",
       "Done!\n",
-      "Training time (secs): 0.009\n",
+      "Training time (secs): 0.013\n",
       "Predicting labels using SVC...\n",
       "Done!\n",
       "Prediction time (secs): 0.007\n",
-      "F1 score for training set: 0.88085106383\n",
+      "F1 score for training set: 0.861995753715\n",
       "Predicting labels using SVC...\n",
       "Done!\n",
-      "Prediction time (secs): 0.002\n",
-      "F1 score for test set: 0.751773049645\n"
+      "Prediction time (secs): 0.003\n",
+      "F1 score for test set: 0.805369127517\n"
      ]
     }
    ],
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -562,15 +562,15 @@
       "Training set size: 100\n",
       "Training SVC...\n",
       "Done!\n",
-      "Training time (secs): 0.002\n",
+      "Training time (secs): 0.013\n",
       "Predicting labels using SVC...\n",
       "Done!\n",
-      "Prediction time (secs): 0.001\n",
-      "F1 score for training set: 0.9\n",
+      "Prediction time (secs): 0.003\n",
+      "F1 score for training set: 0.893081761006\n",
       "Predicting labels using SVC...\n",
       "Done!\n",
-      "Prediction time (secs): 0.001\n",
-      "F1 score for test set: 0.737588652482\n"
+      "Prediction time (secs): 0.002\n",
+      "F1 score for test set: 0.805194805195\n"
      ]
     }
    ],
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -601,15 +601,15 @@
       "Training set size: 200\n",
       "Training SVC...\n",
       "Done!\n",
-      "Training time (secs): 0.005\n",
+      "Training time (secs): 0.014\n",
       "Predicting labels using SVC...\n",
       "Done!\n",
-      "Prediction time (secs): 0.004\n",
-      "F1 score for training set: 0.882352941176\n",
+      "Prediction time (secs): 0.009\n",
+      "F1 score for training set: 0.87459807074\n",
       "Predicting labels using SVC...\n",
       "Done!\n",
-      "Prediction time (secs): 0.003\n",
-      "F1 score for test set: 0.746478873239\n"
+      "Prediction time (secs): 0.002\n",
+      "F1 score for test set: 0.813333333333\n"
      ]
     }
    ],
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -768,48 +768,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training GridSearchCV...\n",
-      "Done!\n",
-      "Training time (secs): 3.610\n",
-      "Best parameter is {'kernel': 'rbf', 'C': 1.0, 'gamma': 0.1}\n",
       "------------------------------------------\n",
       "Training set size: 300\n",
       "Training GridSearchCV...\n",
       "Done!\n",
-      "Training time (secs): 3.544\n",
+      "Training time (secs): 6.312\n",
       "Predicting labels using GridSearchCV...\n",
       "Done!\n",
-      "Prediction time (secs): 0.008\n",
-      "F1 score for training set: 0.97641509434\n",
+      "Prediction time (secs): 0.011\n",
+      "F1 score for training set: 0.835073068894\n",
       "Predicting labels using GridSearchCV...\n",
       "Done!\n",
       "Prediction time (secs): 0.003\n",
-      "F1 score for test set: 0.773333333333\n"
+      "F1 score for test set: 0.816326530612\n",
+      "Best parameter is {'kernel': 'rbf', 'C': 10.0, 'gamma': 0.001}\n"
      ]
     }
    ],
    "source": [
     "# TODO: Fine-tune your model and report the best F1 score\n",
+    "from sklearn.metrics import make_scorer\n",
     "from sklearn import grid_search\n",
     "clf = SVC()\n",
     "param_range = [0.0001, 0.001, 0.01, 0.1, 1.0, 10.0, 100.0, 1000.0]\n",
     "parameters = {'kernel':['rbf', 'sigmoid'], 'C': param_range, 'gamma': param_range}\n",
+    "f1_scorer = make_scorer(f1_score, pos_label=\"yes\")\n",
+    "grid_search = grid_search.GridSearchCV(clf, parameters,scoring=f1_scorer)\n",
     "\n",
-    "clf = grid_search.GridSearchCV(clf, parameters)\n",
-    "train_classifier(clf, X_train, y_train)\n",
-    "\n",
-    "\n",
-    "print \"Best parameter is {}\".format(clf.best_params_)\n",
     "\n",
     "from sklearn.metrics import f1_score\n",
     "\n",
-    "def train_predict(clf, X_train, y_train, X_test, y_test):\n",
+    "def train_predict(grid_search, X_train, y_train, X_test, y_test):\n",
     "    print \"------------------------------------------\"\n",
     "    print \"Training set size: {}\".format(len(X_train))\n",
-    "    train_classifier(clf, X_train, y_train)\n",
-    "    print \"F1 score for training set: {}\".format(predict_labels(clf, X_train, y_train))\n",
-    "    print \"F1 score for test set: {}\".format(predict_labels(clf, X_test, y_test))\n",
-    "train_predict(clf, X_train, y_train, X_test, y_test)"
+    "    train_classifier(grid_search, X_train, y_train)\n",
+    "    \n",
+    "    print \"F1 score for training set: {}\".format(predict_labels(grid_search, X_train, y_train))\n",
+    "    print \"F1 score for test set: {}\".format(predict_labels(grid_search, X_test, y_test))\n",
+    "train_predict(grid_search, X_train, y_train, X_test, y_test)\n",
+    "\n",
+    "print \"Best parameter is {}\".format(grid_search.best_params_)"
    ]
   },
   {
